--- a/www/web-mobile/index.html
+++ b/www/web-mobile/index.html
@@ -48,9 +48,9 @@
     </div>
   </div>
 
-<script src="src/settings.15a20.js" charset="utf-8"></script>
+<script src="src/settings.2395e.js" charset="utf-8"></script>
 
-<script src="main.3f1f3.js" charset="utf-8"></script>
+<script src="main.839a7.js" charset="utf-8"></script>
 
 <script type="text/javascript">
 (function () {
